--- a/styles.css
+++ b/styles.css
@@ -150,3 +150,62 @@ body {
 .footer a:hover {
     text-decoration: underline;
 }
+
+.Error_container {
+    background: linear-gradient(#21C08B, #AB88FF);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0px 30px;
+    min-height: calc(100vh - 200px);
+}
+
+.text__animated{
+    color: white;
+    cursor: pointer;
+    font-size: 90px;
+    font-weight: bold;
+    font-family: 'Muli', sans-serif;
+    letter-spacing: 2px;
+}
+.Error_container-mensaje{
+	color: white;
+    cursor: pointer;
+    font-size: 20px;
+    font-weight: bold;
+    font-family: 'Muli', sans-serif;
+    letter-spacing: 2px;
+}
+
+.text__animated {
+  animation-duration: 2.5s;
+  animation-fill-mode: both;
+  animation-iteration-count: infinite;
+}
+
+@keyframes wobble {
+  0% {transform: translateX(0%);}
+  15% {transform: translateX(-25%) rotate(-5deg);}
+  30% {transform: translateX(20%) rotate(3deg);}
+  45% {transform: translateX(-15%) rotate(-3deg);}
+  60% {transform: translateX(10%) rotate(2deg);}
+  75% {transform: translateX(-5%) rotate(-1deg);}
+  100% {transform: translateX(0%);}
+}
+.Wobble{
+	animation-name: wobble;
+}
+
+@media only screen and (max-width:600px) {
+    .login__container {
+        background-color: transparent;
+        border: none;
+        padding: 0px;
+        width: 100%;
+    }
+    .footer {
+        align-items: flex-start;
+        flex-direction: column;
+    }
+}
